// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CiteModalAction renders with all props 1`] = `
<Fragment>
  <ListItemAction>
    <EventTracker
      eventId="Cite"
      eventPropName="onClick"
      extractEventArgsToForward={null}
    >
      <Button
        block={false}
        ghost={false}
        htmlType="button"
        loading={false}
        onClick={[Function]}
      >
        <IconText
          icon={<ForwardRef(ExportOutlined) />}
          text="cite"
        />
      </Button>
    </EventTracker>
  </ListItemAction>
  <Modal
    confirmLoading={false}
    footer={null}
    maskTransitionName="fade"
    okType="primary"
    onCancel={[Function]}
    title="Cite Article"
    transitionName="zoom"
    visible={false}
    width={520}
  >
    <LoadingOrChildren
      loading={false}
    >
      <div>
        <Row
          gutter={0}
        >
          <pre />
        </Row>
        <Row
          gutter={0}
          justify="space-between"
          type="flex"
        >
          <div>
            <CopyToClipboard
              onCopy={[Function]}
            >
              <Button
                block={false}
                ghost={false}
                htmlType="button"
                loading={false}
                style={
                  Object {
                    "marginRight": 12,
                  }
                }
              >
                <ForwardRef(CopyOutlined) />
                 Copy to Clipboard
              </Button>
            </CopyToClipboard>
            <Button
              block={false}
              ghost={false}
              htmlType="button"
              loading={false}
              onClick={[Function]}
            >
              <ForwardRef(DownloadOutlined) />
               Download
            </Button>
          </div>
          <EventTracker
            eventId="CiteFormatSelection"
            eventPropName="onChange"
            extractEventArgsToForward={[Function]}
          >
            <SelectBox
              defaultValue="application/x-bibtex"
              onChange={[Function]}
              options={
                Array [
                  Object {
                    "display": "BibTeX",
                    "value": "application/x-bibtex",
                  },
                  Object {
                    "display": "LaTeX (EU)",
                    "value": "application/vnd+inspire.latex.eu+x-latex",
                  },
                  Object {
                    "display": "LaTeX (US)",
                    "value": "application/vnd+inspire.latex.us+x-latex",
                  },
                  Object {
                    "display": "CV",
                    "value": "text/vnd+inspire.html+html",
                  },
                ]
              }
              style={
                Object {
                  "width": 140,
                }
              }
            />
          </EventTracker>
        </Row>
      </div>
    </LoadingOrChildren>
  </Modal>
</Fragment>
`;

exports[`CiteModalAction renders with loading 1`] = `
<Fragment>
  <ListItemAction>
    <EventTracker
      eventId="Cite"
      eventPropName="onClick"
      extractEventArgsToForward={null}
    >
      <Button
        block={false}
        ghost={false}
        htmlType="button"
        loading={false}
        onClick={[Function]}
      >
        <IconText
          icon={<ForwardRef(ExportOutlined) />}
          text="cite"
        />
      </Button>
    </EventTracker>
  </ListItemAction>
  <Modal
    confirmLoading={false}
    footer={null}
    maskTransitionName="fade"
    okType="primary"
    onCancel={[Function]}
    title="Cite Article"
    transitionName="zoom"
    visible={false}
    width={520}
  >
    <LoadingOrChildren
      loading={true}
    >
      <div>
        <Row
          gutter={0}
        >
          <pre />
        </Row>
        <Row
          gutter={0}
          justify="space-between"
          type="flex"
        >
          <div>
            <CopyToClipboard
              onCopy={[Function]}
            >
              <Button
                block={false}
                ghost={false}
                htmlType="button"
                loading={false}
                style={
                  Object {
                    "marginRight": 12,
                  }
                }
              >
                <ForwardRef(CopyOutlined) />
                 Copy to Clipboard
              </Button>
            </CopyToClipboard>
            <Button
              block={false}
              ghost={false}
              htmlType="button"
              loading={false}
              onClick={[Function]}
            >
              <ForwardRef(DownloadOutlined) />
               Download
            </Button>
          </div>
          <EventTracker
            eventId="CiteFormatSelection"
            eventPropName="onChange"
            extractEventArgsToForward={[Function]}
          >
            <SelectBox
              defaultValue="application/x-bibtex"
              onChange={[Function]}
              options={
                Array [
                  Object {
                    "display": "BibTeX",
                    "value": "application/x-bibtex",
                  },
                  Object {
                    "display": "LaTeX (EU)",
                    "value": "application/vnd+inspire.latex.eu+x-latex",
                  },
                  Object {
                    "display": "LaTeX (US)",
                    "value": "application/vnd+inspire.latex.us+x-latex",
                  },
                  Object {
                    "display": "CV",
                    "value": "text/vnd+inspire.html+html",
                  },
                ]
              }
              style={
                Object {
                  "width": 140,
                }
              }
            />
          </EventTracker>
        </Row>
      </div>
    </LoadingOrChildren>
  </Modal>
</Fragment>
`;

exports[`CiteModalAction shows an alert with the error message when there is an error in setCiteContentFor 1`] = `
<Fragment>
  <ListItemAction>
    <EventTracker
      eventId="Cite"
      eventPropName="onClick"
      extractEventArgsToForward={null}
    >
      <Button
        block={false}
        ghost={false}
        htmlType="button"
        loading={false}
        onClick={[Function]}
      >
        <IconText
          icon={<ForwardRef(ExportOutlined) />}
          text="cite"
        />
      </Button>
    </EventTracker>
  </ListItemAction>
  <Modal
    confirmLoading={false}
    footer={null}
    maskTransitionName="fade"
    okType="primary"
    onCancel={[Function]}
    title="Cite Article"
    transitionName="zoom"
    visible={false}
    width={520}
  >
    <LoadingOrChildren
      loading={false}
    >
      <div>
        <div
          className="mb3"
        >
          <Alert
            description="There is an error"
            showIcon={true}
            type="error"
          />
        </div>
        <Row
          gutter={0}
        >
          <pre />
        </Row>
        <Row
          gutter={0}
          justify="space-between"
          type="flex"
        >
          <div>
            <CopyToClipboard
              onCopy={[Function]}
            >
              <Button
                block={false}
                ghost={false}
                htmlType="button"
                loading={false}
                style={
                  Object {
                    "marginRight": 12,
                  }
                }
              >
                <ForwardRef(CopyOutlined) />
                 Copy to Clipboard
              </Button>
            </CopyToClipboard>
            <Button
              block={false}
              ghost={false}
              htmlType="button"
              loading={false}
              onClick={[Function]}
            >
              <ForwardRef(DownloadOutlined) />
               Download
            </Button>
          </div>
          <EventTracker
            eventId="CiteFormatSelection"
            eventPropName="onChange"
            extractEventArgsToForward={[Function]}
          >
            <SelectBox
              defaultValue="application/x-bibtex"
              onChange={[Function]}
              options={
                Array [
                  Object {
                    "display": "BibTeX",
                    "value": "application/x-bibtex",
                  },
                  Object {
                    "display": "LaTeX (EU)",
                    "value": "application/vnd+inspire.latex.eu+x-latex",
                  },
                  Object {
                    "display": "LaTeX (US)",
                    "value": "application/vnd+inspire.latex.us+x-latex",
                  },
                  Object {
                    "display": "CV",
                    "value": "text/vnd+inspire.html+html",
                  },
                ]
              }
              style={
                Object {
                  "width": 140,
                }
              }
            />
          </EventTracker>
        </Row>
      </div>
    </LoadingOrChildren>
  </Modal>
</Fragment>
`;
